--- a/BirdFarmShop/appsettings.json
+++ b/BirdFarmShop/appsettings.json
@@ -13,5 +13,12 @@
 
   "ConnectionStrings": {
     "BirdFarmShop": "server =(local); database=BirdFarmShop;uid=sa;pwd=12345;TrustServerCertificate=True"
+  },
+
+  "Authentication": {
+    "Google": {
+      "ClientId":"749353223474-cndmgg1a8a9fdu06u21k641044s7poqg.apps.googleusercontent.com",
+      "ClientSecret":"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"
+    }
   }
 }
