--- a/BirdFarmShop/BirdFarmShop.csproj
+++ b/BirdFarmShop/BirdFarmShop.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Pages\Test\" />
+    <Folder Include="Pages\Manager\OrderManagement\" />
   </ItemGroup>
 
 </Project>
